--- a/gradle_bintray_push.gradle
+++ b/gradle_bintray_push.gradle
@@ -1,4 +1,3 @@
-apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
@@ -12,7 +11,7 @@ install {
 
         packaging 'aar'
         groupId GROUP
-        artifactId POM_ARTIFACT_ID
+        artifactId ARTIFACT_ID
         version VERSION_NAME
 
         licenses {
@@ -37,22 +36,34 @@ install {
     }
   }
 }
-//task sourcesJar(type: Jar) {
-//  classifier = 'sources'
-//}
-//
-//task javadocJar(type: Jar, dependsOn: javadoc) {
-//  classifier = 'javadoc'
-//  from javadoc.destinationDir
-//}
-//
-//artifacts {
-//  archives javadocJar
-//  archives sourcesJar
-//}
+task sourcesJar(type: Jar) {
+  from android.sourceSets.main.java.srcDirs
+  classifier = 'sources'
+}
+task javadoc(type: Javadoc) {
+  source = android.sourceSets.main.java.srcDirs
+  classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  classifier = 'javadoc'
+  from javadoc.destinationDir
+}
+javadoc {
+  options {
+    encoding "UTF-8"
+    charSet 'UTF-8'
+  }
+}
+artifacts {
+  archives javadocJar
+  archives sourcesJar
+}
 
 Properties properties = new Properties()
 properties.load(project.rootProject.file('your_login_local.properties').newDataInputStream())
+
+group = GROUP
+version = VERSION_NAME
 
 bintray {
   user = properties.getProperty("BINTRAY_USER")
@@ -60,16 +71,17 @@ bintray {
 
   configurations = ['archives']
   pkg {
-    repo = NAME
+    repo = GROUP
     name = NAME
     websiteUrl = SCM_URL
     vcsUrl = SCM_CONNECTION
     licenses = ["Apache-2.0"]
-    issueTrackerUrl = SCM_URL+"/issues"
+    issueTrackerUrl = SCM_ISSUE_URL
     publish = true
     publicDownloadNumbers = true
-    version {
-      desc = DESCRIPTION
+    pkg.version {
+      desc = VERSION_DESCRIPTION
+      attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
       gpg {
         sign = true
         passphrase = properties.getProperty("BINTRAY_GPG_PASSWORD")
