--- a/ylog/build.gradle
+++ b/ylog/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
   testCompile 'junit:junit:4.12'
-  compile SUPPORT_APPCOMPAT_V7
+  compile 'com.android.support:support-annotations:24.2.1'
 }
 
 ext.NAME = "YLog"
