--- a/ylog/build.gradle
+++ b/ylog/build.gradle
@@ -34,8 +34,8 @@ ext.DESCRIPTION = "android log library"
 ext.GROUP = "me.kennethyo.library"
 ext.ARTIFACT_ID = "ylog"
 
-ext.VERSION_NAME = "1.5"
-ext.VERSION_DESCRIPTION = "customer printer"
+ext.VERSION_NAME = "1.6"
+ext.VERSION_DESCRIPTION = "one log console print log message"
 
 ext.SCM_URL = "https://github.com/KennethYo/YLog"
 ext.SCM_ISSUE_URL = "https://github.com/KennethYo/YLog/issues"
